--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
----
-layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
----
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dropdown Menu Example</title>
+    <script src="toggle.js"></script>
+</head>
+<body>
+
+<label for="plotSelector">Select a Plot:</label>
+<select id="plotSelector" onchange="loadPlot()">
+    <option value="plot1.html">Plot 1</option>
+    <option value="plot2.html">Plot 2</option>
+    <!-- Add more options as needed -->
+</select>
+
+<div id="plot-container"></div>
+
+</body>
+</html>
